--- a/JavaScript/28_数组/index.html
+++ b/JavaScript/28_数组/index.html
@@ -38,6 +38,7 @@
         // 下标：赋值，读取
         var users = ["Jack", "Mack", "John"];
         console.log(users[1]);
+        console.log(users[5]); // 数组越界：undefined
         // length 属性
         console.log(users.length); // 3
     </script>
