--- a/JavaScript/42_Document 对象 方法/获取元素/index.html
+++ b/JavaScript/42_Document 对象 方法/获取元素/index.html
@@ -20,16 +20,54 @@
 <body>
     <div>Hello1</div>
     <div>Hello2</div>
+    <p class="text">Hello3</p>
+    <form name="login"></form>
+    <div id="root">哈哈哈</div>
+    <div class="nav">nav1</div>
+    <div class="nav">nav2</div>
     <script>
         /*
             document.getElementByTagName() 方法搜索 HTML 标签名，返回符合条件的元素。它的返回值是一个类似数组对象(HTMLCollection 实例)，可以实时反映 HTML 文档的变化。
             如果没有任何匹配的元素，就返回一个空集
             如果传入 *，就可以返回文档中所有 HTML 元素
         */
-
         var div1 = document.getElementsByTagName("div")[0];
         div1.innerHTML = "Hello, world!"
         console.log(div1);
+        /*
+            document.getElementsByClassName() 方法返回一个类似数组的对象(HTMLCollection 实例)，
+            包括了所有 class 名字符合指定条件的元素，元素的变化实时反映在返回结果中
+            由于 class 是保留字，所以 JavaScript 一律使用 className 表示 CSS 的 class
+            参数可以是多个 class，他们之间使用空格分隔
+        */
+        var text = document.getElementsByClassName("text")[0];
+        text.innerHTML = "Hello!";
+        console.log(text);
+        /*
+            document.getElementsByName() 方法用于选择 name 属性的 HTML 元素(比如 <form>、 <radio>、 <img> 等)，返回一个类似数组的对象(NodeList 实例)，因为 name 属性相同的元素可能不止一个
+        */
+        // 使用率极低
+        var name = document.getElementsByName("login");
+        console.log(name);
+        /*
+            document.getElementsById() 方法返回匹配指定 id 属性的元素节点。如果没有发现匹配的节点，则返回 null
+            注意，该方法的参数是大小写敏感的。比如，如果某个节点的 id 属性 main，那么 document.getElementById("Main")，将返回 null
+        */
+        // 非常常用
+        var root = document.getElementById("root");
+        root.innerHTML = "呵呵呵";
+        console.log(root);
+        /*
+            document.querySelector() 方法接受一个 CSS 选择器作为参数，返回匹配该选择器的元素节点。
+            如果有多个节点满足匹配条件，则返回第一个匹配的节点。如果没发现匹配的节点，则返回 null
+        */
+        var nav = document.querySelector(".nav");
+        console.log(nav);
+        /*
+            document.querySelectorAll() 方法与 querySelector() 用法类似，区别是返回一个 NodeList 对象，包含所有匹配给定选择器的节点；
+        */
+        var navs = document.querySelectorAll(".nav");
+        console.log(navs);
     </script>
 </body>
 
