--- a/JavaScript/50_事件类型之键盘事件/index.html
+++ b/JavaScript/50_事件类型之键盘事件/index.html
@@ -19,6 +19,7 @@
 
 <body>
     <input type="text" id="username">
+    <input type="text" id="password">
     <script>
         // 键盘事件由用户击打键盘触发，主要有 keydown、keypress、keyup 三个事件
         // keydown: 按下键盘触发
