--- a/JavaScript/52_事件代理(事件委托)/index.html
+++ b/JavaScript/52_事件代理(事件委托)/index.html
@@ -29,8 +29,8 @@
         //     console.log("点击了");
         // }
         list.addEventListener("click", function (event) {
-            if (event.target.tagName.toLowerCase() === 'LI') {
-                console.log("点击了 LI 标签");
+            if (event.target.tagName.toLowerCase() === 'li') {
+                console.log("点击了 li 标签");
                 console.log(event.target.innerHTML);
             }
         })
