--- a/JavaScript/65_字符串新增方法/index.html
+++ b/JavaScript/65_字符串新增方法/index.html
@@ -50,6 +50,7 @@
         console.log(it.trimEnd());
         // at()
         // at() 方法接受一个整数作为参数，返回参数指定位置的字符串，支持负索引(即倒数的位置)
+        // 如果参数位置超出了字符串范围，at() 返回 undefined
         var myIt = "itbaizhan";
         console.log(myIt.at(3)); // a
         console.log(myIt.at(-3)); // h
