--- a/JavaScript/67_数组扩展_新增方法/index.html
+++ b/JavaScript/67_数组扩展_新增方法/index.html
@@ -57,6 +57,7 @@
         // Array.of()
         // Array.of(3, 11, 8) // [3, 11, 8]
         console.log(Array.of(10, 20, 30));  // [10, 20, 30]
+        console.log(Array(3)); // [, , ,]
     </script>
 </body>
 
