--- a/JavaScript/68_对象的扩展/index.html
+++ b/JavaScript/68_对象的扩展/index.html
@@ -54,6 +54,8 @@
         var z = { a: 10, b: 20 }
         var n = { ...z }
         console.log(n); // a: 10, b: 20
+        var obj = {};
+        console.log(obj.demo); // undefined
     </script>
 </body>
 
